feat: mejore la vista del login

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layoutLogin"
     android:layout_width="match_parent"
@@ -10,29 +11,42 @@
     android:background="@color/colorBackground"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:id="@+id/ivLogo"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="16dp"
+        app:srcCompat="@drawable/agriculture_24px"
+        app:tint="@color/colorPrimary"
+        android:contentDescription="Logo de AgroApp" />
 
     <TextView
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="AgroApp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorTextPrimary"
         android:textSize="32sp"
         android:textStyle="bold"
-        android:layout_marginBottom="40dp" />
+        android:layout_marginBottom="24dp" />
 
-
-    <EditText
-        android:id="@+id/etUsuario"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilUsuario"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Usuario o Email"
-        android:inputType="textEmailAddress"
-        android:padding="12dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:textColor="@color/colorTextPrimary"
-        android:textColorHint="@color/colorTextSecondary"
-        android:layout_marginBottom="4dp" />
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etUsuario"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:textColor="@color/colorTextPrimary"
+            android:layout_marginBottom="12dp"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/tvErrorUsuario"
@@ -41,22 +55,27 @@
         android:textColor="@color/colorError"
         android:textSize="12sp"
         android:visibility="gone"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:layout_marginBottom="12dp"
         tools:text="Usuario no válido" />
 
-
-    <EditText
-        android:id="@+id/etPassword"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilPassword"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Contraseña"
-        android:inputType="textPassword"
-        android:padding="12dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:textColor="@color/colorTextPrimary"
-        android:textColorHint="@color/colorTextSecondary"
-        android:layout_marginBottom="4dp" />
+        app:endIconMode="password_toggle">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:textColor="@color/colorTextPrimary"
+            android:layout_marginBottom="12dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/tvErrorPassword"
@@ -65,19 +84,20 @@
         android:textColor="@color/colorError"
         android:textSize="12sp"
         android:visibility="gone"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:layout_marginBottom="24dp"
         tools:text="Contraseña incorrecta" />
 
-
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:paddingTop="14dp"
+        android:paddingBottom="14dp"
         android:text="Iniciar Sesión"
-        android:backgroundTint="@color/colorPrimary"
-        android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:padding="12dp"
-        android:elevation="2dp"
-        android:layout_marginBottom="20dp" />
+        app:cornerRadius="12dp" />
+
 </LinearLayout>
