--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -20,6 +20,14 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        android:background="@color/colorBackground"
         app:headerLayout="@layout/nav_header_menu"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer"
+        app:itemIconTint="@color/nav_item_icon_tint_selector"
+        app:itemTextColor="@color/nav_item_text_tint_selector"
+        app:itemHorizontalPadding="28dp"
+        app:itemBackground="@drawable/nav_item_background_selector"
+        app:itemShapeInsetStart="16dp"
+        app:itemShapeInsetEnd="16dp" />
+
 </androidx.drawerlayout.widget.DrawerLayout>
