--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,18 @@
     <style name="Theme.AgroApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.AgroApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="App.CardView.Default" parent="Widget.Material3.CardView.Elevated">
+        <item name="cardBackgroundColor">@color/white</item>
+        <item name="cardCornerRadius">16dp</item>
+        <item name="android:layout_marginHorizontal">12dp</item>
+        <item name="android:layout_marginVertical">6dp</item>
+    </style>
+
+    <style name="App.CardView.Themed" parent="Widget.Material3.CardView.Elevated">
+        <item name="cardBackgroundColor">@color/colorBackgroundGreenLight</item>
+        <item name="cardCornerRadius">16dp</item>
+        <item name="android:layout_marginHorizontal">12dp</item>
+        <item name="android:layout_marginVertical">6dp</item>
+    </style>
 </resources>
